<resources>
    <string name="app_name">GX Sales</string>
    <string name="all_invalid_email">Invalid email</string>
    <string name="login_invalid_password">Invalid password</string>
    <string name="all_email">Email</string>
    <string name="all_email_hint">e.g john@example.com</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="all_copyright">GlobalXtreme ©</string>
    <string name="dashboard_home">Home</string>
    <string name="dashboard_leads">Leads</string>
    <string name="dashboard_shop">Shop</string>
    <string name="dashboard_account">Account</string>
    <string name="dummy_name">Name</string>
    <string name="dummy_email">Email</string>
    <string name="account_branch">Branch</string>
    <string name="dummy_branch">GlobalXtreme Bali</string>
    <string name="account_division">Division</string>
    <string name="dummy_division">Sales</string>
    <string name="account_job_position">Job Position</string>
    <string name="dummy_job_position">Senior Sales</string>
    <string name="account_log_out">Log Out</string>
    <string name="hint_name">e.g John Doe</string>
    <string name="leads_filter">Filter</string>
    <string name="filter_date_range">Date Range</string>
    <string name="hint_range_date">dd/mm/yyyy - dd/mm/yyyy</string>
    <string name="filter_reset">Reset</string>
    <string name="filter_search">Search</string>
    <string name="filter_status">Status</string>
    <string name="filter_channel">Channel</string>
    <string name="filter_media">Media</string>
    <string name="filter_source">Source</string>
    <string name="hint_select_status">- Select Status -</string>
    <string name="hint_select_channel">- Select Channel -</string>
    <string name="hint_select_media">- Select Media -</string>
    <string name="hint_select_source">- Select Source -</string>
    <string name="form_full_name">Full Name*</string>
    <string name="form_personal_data">Personal Data</string>
    <string name="hint_select_branch_office">- Select Branch Office -</string>
    <string name="form_select_branch_office">Select Branch Office*</string>
    <string name="form_branch_office">Branch Office</string>
    <string name="form_cell_phone_number">Cell Phone Number*</string>
    <string name="form_address">Address*</string>
    <string name="form_address_hint">e.g Jl Kerobokan 388x</string>
    <string name="form_male">Male</string>
    <string name="form_female">Female</string>
    <string name="form_choose_gender">Choose Gender ?</string>
    <string name="form_identity_number">Identity Number</string>
    <string name="hint_id_number">e.g 1879920xxxxxx</string>
    <string name="form_upload_identity_passport">Upload Identity / Passport</string>
    <string name="form_add_a_photo">Add a photo</string>
    <string name="form_next">Next</string>
    <string name="form_select_location">Select Location</string>
    <string name="form_phone_hint">879993xxxx</string>
    <string name="form_latitude">Latitude*</string>
    <string name="form_longitude">Longitude*</string>
    <string name="form_latitude_hint">e.g -8.44444</string>
    <string name="form_longitude_hint">e.g 115.00003</string>
    <string name="form_lead_information">Lead Information</string>
    <string name="form_lead_type">Lead Type*</string>
    <string name="form_hint_select_lead_type">- Select Lead Type -</string>
    <string name="form_lead_channel">Lead Channel*</string>
    <string name="form_hint_select_lead_channel">- Select Lead Channel -</string>
    <string name="form_lead_media">Lead Media*</string>
    <string name="form_hint_select_lead_media">- Select Lead Media -</string>
    <string name="form_lead_source">Lead Source*</string>
    <string name="form_hint_select_lead_source">- Select Lead Source -</string>
    <string name="form_lead_status">Lead Status*</string>
    <string name="form_hint_select_lead_status">- Select Lead Status -</string>
    <string name="form_lead_probability">Lead Probability*</string>
    <string name="form_hint_select_lead_probability">- Select Lead Probability -</string>
    <string name="form_notes">Notes*</string>
    <string name="form_previous">Previous</string>
    <string name="form_submit">Submit</string>
    <string name="form_update_lead">Update Lead</string>
    <string name="form_add_lead">Add Lead</string>
    <string name="form_hint_file_upload_jpg">file-upload.jpg</string>
    <string name="form_hint_2000_kb">2000 kb</string>
    <string name="form_code_id">+62</string>
    <string name="dialog_form_camera">Camera</string>
    <string name="dialog_form_gallery">Gallery</string>
    <string name="dialog_form_choose_image">Choose Image</string>
    <string name="dialog_done">Done</string>
    <string name="dialog_desc_succes">Your process is success</string>
    <string name="dialog_title_success">Success</string>
    <string name="location_back">Back</string>
    <string name="dummy_number">#1245435</string>
    <string name="shop_search_hint">Search...</string>
    <string name="error_data_not_found">Data Not Found</string>
    <string name="shop_type">Type :</string>
    <string name="shop_stock">Stock :</string>
    <string name="itemdashboard_hint">15</string>
    <string name="itemdashboard_title_hint">Total All Leads</string>
    <string name="itemshop_tax_title">w/Tax:</string>
</resources>