<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.location.LocationFragment">

    <fragment
        android:id="@+id/fragment_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_location_back"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_location_search"
        style="@style/Theme.GXSales.OutlinedRoundedBox.Search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#F6F6F6"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@id/btn_location_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_location_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/form_address_hint"
            android:imeOptions="actionSearch"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColorHint="@color/color_edit_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_location_reset"
        style="@style/Theme.GXSales.Button.OutlinedRoundedBox.Previous"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:drawableEnd="@drawable/ic_rotate"
        android:drawablePadding="8dp"
        android:fontFamily="@font/inter_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/filter_reset"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="#F9C900"
        app:layout_constraintBottom_toBottomOf="@id/til_location_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_location_search"
        app:layout_constraintTop_toTopOf="@id/til_location_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_location_back"
        style="@style/Theme.GXSales.Button.OutlinedRoundedBox.Previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/inter_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="48dp"
        android:text="Back"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="#344054"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_location_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_map" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_location_select"
        style="@style/Theme.GXSales.Button.OutlinedRoundedBox.Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter_medium"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/form_select_location"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_location_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_location_back"
        app:layout_constraintTop_toTopOf="@id/btn_location_back" />
</androidx.constraintlayout.widget.ConstraintLayout>